--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -24,6 +24,10 @@ body, p, ol, ul, td {
   line-height: 18px;
 }
 
+.loading-bg {
+  background: url(<%= asset_path 'loading.gif' %>) no-repeat center center;
+}
+
 #wrap {
   min-height: 100%;
   height: auto !important;
