--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -3,3 +3,39 @@
   margin-left:27px;
   width: 40px;
 }
+
+.userpic-container {
+  position: relative;
+}
+
+#userpic {
+  max-height:100%;
+  max-width:100%;
+}
+
+#userpic-large {
+  min-height: 150px;
+  min-width: 150px;
+}
+
+#userpic-preview, #userpic {
+  min-height: 150px;
+  min-height: 150px;
+}
+
+.div-preview {
+  height: 150px;
+  width: 150px;
+  overflow: hidden;
+}
+
+.edit-userpic {
+  cursor: pointer;
+  top: 100%;
+  left: 0%;
+  position: absolute;
+  background-color: rgba(255,255,255,0.7);
+  height: 20px;
+  width: 100%;
+  margin-top: -20px;
+}
