--- a/app/views/tracks/edit.html.haml
+++ b/app/views/tracks/edit.html.haml
@@ -22,22 +22,29 @@
     = f.hidden_field 'ff_start', :id => 'ff_start'
     = f.hidden_field 'ff_end', :id => 'ff_end'
     .form-group
-      = f.label 'name', t('static_pages.index.track_form.name'), :class => 'col-sm-2 control-label', :for => 'name'
+      %span.col-sm-2.control-label
+        = t('static_pages.index.track_form.name')
+      -# = f.label 'name', t('static_pages.index.track_form.name'), :class => '', :for => 'name'
       .col-sm-4
         = f.text_field 'name', :class => 'form-control', :placeholder => t('static_pages.index.track_form.name_plh'), :type => 'text'
     .form-group
-      = f.label 'suit', t('static_pages.index.track_form.suit'), :class => 'col-sm-2 control-label', :for => 'suit'
+      %span.col-sm-2.control-label
+        = t('static_pages.index.track_form.suit')
+      -# = f.label 'suit', t('static_pages.index.track_form.suit'), :class => 'col-sm-2 control-label', :for => 'suit'
       .col-sm-4
-        = f.text_field 'suit', :class => 'form-control wingsuit-autocomplete', :placeholder => t('static_pages.index.track_form.suit_plh'), :type => 'text'
-        = f.hidden_field 'wingsuit_id', :id => 'wingsuit-id', :value => @track.wingsuit_id
+        %select.track-wingsuit-select{name: 'track[wingsuit_id]'}
 
     .form-group
-      = f.label 'location', t('static_pages.index.track_form.location'), :class => 'col-sm-2 control-label', :for => 'location'
+      %span.col-sm-2.control-label
+        = t('static_pages.index.track_form.location')
+      -# = f.label 'location', t('static_pages.index.track_form.location'), :class => 'col-sm-2 control-label', :for => 'location'
       .col-sm-4
         = f.text_field 'location', :class => 'form-control', :placeholder => t('static_pages.index.track_form.location_plh'), :type => 'text'
 
     .form-group
-      = f.label 'kind', t('static_pages.index.track_form.kind'), :class => 'col-sm-2 control-label', :for => 'kind'
+      %span.col-sm-2.control-label
+        = t('static_pages.index.track_form.kind')
+      -# = f.label 'kind', t('static_pages.index.track_form.kind'), :class => 'col-sm-2 control-label', :for => 'kind'
       .btn-group.col-sm-10{:data => {:toggle => 'buttons'}}
         %label.btn.btn-default{ :class => ('active' if @track.skydive?) }
           = f.radio_button 'kind', 'skydive'
@@ -48,13 +55,17 @@
           = 'B.A.S.E'
 
     .form-group
-      = f.label t('static_pages.index.track_form.comment'), nil, :class => 'col-sm-2 control-label', :for => 'comment'
+      %span.col-sm-2.control-label
+        = t('static_pages.index.track_form.comment')
+      -# = f.label t('static_pages.index.track_form.comment'), nil, :class => 'col-sm-2 control-label', :for => 'comment'
       .col-sm-4
         = f.text_area 'comment', :class => 'form-control', :rows => 3, :placeholder => t('static_pages.index.track_form.comment_plh')
 
     - if user_signed_in?
       .form-group
-        = f.label 'visibility', t('tracks.edit.visibility'), :class => 'col-sm-2 control-label', :for => 'visibility'
+        %span.col-sm-2.control-label
+          = t('tracks.edit.visibility')
+        -# = f.label 'visibility', t('tracks.edit.visibility'), :class => 'col-sm-2 control-label', :for => 'visibility'
         .btn-group.col-sm-10{:data => {:toggle => 'buttons'}}
           %label.btn.btn-default{ :class => ('active' if @track.public_track?) }
             = f.radio_button 'visibility', 'public_track'
