создание удаление раундов

--- a/app/views/events/_competitor_modal.html.haml
+++ b/app/views/events/_competitor_modal.html.haml
@@ -15,7 +15,8 @@
           .form-group.row
             %span.col-sm-3.control-label= 'Профиль:'
             .col-sm-7
-              %select.form-control#competitor-name
+              %select.form-control.competitor-profile
+              %input.form-control.new-profile-name
             -# %span.col-sm-1.control-label= 'Имя:'
             -# .col-sm-4
             -#   %input.form-control#competitor-first-name
