--- a/app/views/user_profile/show.html.haml
+++ b/app/views/user_profile/show.html.haml
@@ -1,12 +1,9 @@
-.user{data: {id: @user.user_profile.id, tracks: user_tracks}}
+.user{data: {id: @profile.id, tracks: user_tracks}}
 .container.top-buffer
   .row
     .col-md-2
       .top-buffer.userpic-container.text-center
-        -if @user.user_profile
-          = image_tag(@user.user_profile.userpic.url(:medium), id: 'userpic',:class => 'img-responsive img-rounded loading-bg')
-        - else
-          = image_tag '/images/medium/missing.png', :class => 'img-responsive img-rounded loading-bg'
+        = image_tag(@profile.userpic.url(:medium), id: 'userpic',:class => 'img-responsive img-rounded loading-bg')
         .edit-userpic
           %span= 'Click to edit'
 
@@ -14,13 +11,13 @@
       .row
         .col-md-11
           %h1
-            - if @user.user_profile && !@user.user_profile.name.blank?
-              = @user.user_profile.name
+            - unless @profile.name.blank?
+              = @profile.name
             - else
-              = @user.email
+              = @profile.user.email
 
         .col-md-1
-          - if current_user == @user
+          - if current_user.user_profile == @profile
             = link_to content_tag(:span, nil, :class => 'fa fa-pencil'),
                       edit_user_registration_path,
                       :class => 'btn btn-default edit'
@@ -69,7 +66,7 @@
             %th= t('activerecord.attributes.track.comment')
             %th= t('activerecord.attributes.track.uploaded_at')
         %tbody
-          - @user.tracks.each do |track|
+          - @profile.tracks.each do |track|
             %tr.clickableRow{:data => {:url => track_path(:id => track.id)}}
               %td.text-info= track.id
               %td.text-info= track.suit
